Added line graph with interactivity

--- a/Learning Pandas.ipynb
+++ b/Learning Pandas.ipynb
@@ -2,170 +2,217 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "85a19585",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>confirmed</th>\n",
-       "      <th>deaths</th>\n",
-       "      <th>recovered</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1/22/20</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1/23/20</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1/24/20</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1/25/20</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1/26/20</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>637</th>\n",
-       "      <td>10/20/21</td>\n",
-       "      <td>1716508</td>\n",
-       "      <td>18166</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>638</th>\n",
-       "      <td>10/21/21</td>\n",
-       "      <td>1716858</td>\n",
-       "      <td>18182</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>639</th>\n",
-       "      <td>10/22/21</td>\n",
-       "      <td>1717177</td>\n",
-       "      <td>18194</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>640</th>\n",
-       "      <td>10/23/21</td>\n",
-       "      <td>1717462</td>\n",
-       "      <td>18199</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>641</th>\n",
-       "      <td>10/24/21</td>\n",
-       "      <td>1717698</td>\n",
-       "      <td>18207</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>642 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         date  confirmed  deaths  recovered\n",
-       "0     1/22/20          2       0          0\n",
-       "1     1/23/20          2       0          0\n",
-       "2     1/24/20          2       0          0\n",
-       "3     1/25/20          2       0          0\n",
-       "4     1/26/20          4       0          1\n",
-       "..        ...        ...     ...        ...\n",
-       "637  10/20/21    1716508   18166          0\n",
-       "638  10/21/21    1716858   18182          0\n",
-       "639  10/22/21    1717177   18194          0\n",
-       "640  10/23/21    1717462   18199          0\n",
-       "641  10/24/21    1717698   18207          0\n",
-       "\n",
-       "[642 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Afghanistan\n",
+      "Albania\n",
+      "Algeria\n",
+      "Andorra\n",
+      "Angola\n",
+      "Antigua and Barbuda\n",
+      "Argentina\n",
+      "Armenia\n",
+      "Australia\n",
+      "Austria\n",
+      "Azerbaijan\n",
+      "Bahamas\n",
+      "Bahrain\n",
+      "Bangladesh\n",
+      "Barbados\n",
+      "Belarus\n",
+      "Belgium\n",
+      "Belize\n",
+      "Benin\n",
+      "Bhutan\n",
+      "Bolivia\n",
+      "Bosnia and Herzegovina\n",
+      "Botswana\n",
+      "Brazil\n",
+      "Brunei\n",
+      "Bulgaria\n",
+      "Burkina Faso\n",
+      "Burma\n",
+      "Burundi\n",
+      "Cabo Verde\n",
+      "Cambodia\n",
+      "Cameroon\n",
+      "Canada\n",
+      "Central African Republic\n",
+      "Chad\n",
+      "Chile\n",
+      "China\n",
+      "Colombia\n",
+      "Comoros\n",
+      "Congo (Brazzaville)\n",
+      "Congo (Kinshasa)\n",
+      "Costa Rica\n",
+      "Cote d'Ivoire\n",
+      "Croatia\n",
+      "Cuba\n",
+      "Cyprus\n",
+      "Czechia\n",
+      "Denmark\n",
+      "Diamond Princess\n",
+      "Djibouti\n",
+      "Dominica\n",
+      "Dominican Republic\n",
+      "Ecuador\n",
+      "Egypt\n",
+      "El Salvador\n",
+      "Equatorial Guinea\n",
+      "Eritrea\n",
+      "Estonia\n",
+      "Eswatini\n",
+      "Ethiopia\n",
+      "Fiji\n",
+      "Finland\n",
+      "France\n",
+      "Gabon\n",
+      "Gambia\n",
+      "Georgia\n",
+      "Germany\n",
+      "Ghana\n",
+      "Greece\n",
+      "Grenada\n",
+      "Guatemala\n",
+      "Guinea\n",
+      "Guinea-Bissau\n",
+      "Guyana\n",
+      "Haiti\n",
+      "Holy See\n",
+      "Honduras\n",
+      "Hungary\n",
+      "Iceland\n",
+      "India\n",
+      "Indonesia\n",
+      "Iran\n",
+      "Iraq\n",
+      "Ireland\n",
+      "Israel\n",
+      "Italy\n",
+      "Jamaica\n",
+      "Japan\n",
+      "Jordan\n",
+      "Kazakhstan\n",
+      "Kenya\n",
+      "Kiribati\n",
+      "Korea, South\n",
+      "Kosovo\n",
+      "Kuwait\n",
+      "Kyrgyzstan\n",
+      "Laos\n",
+      "Latvia\n",
+      "Lebanon\n",
+      "Lesotho\n",
+      "Liberia\n",
+      "Libya\n",
+      "Liechtenstein\n",
+      "Lithuania\n",
+      "Luxembourg\n",
+      "MS Zaandam\n",
+      "Madagascar\n",
+      "Malawi\n",
+      "Malaysia\n",
+      "Maldives\n",
+      "Mali\n",
+      "Malta\n",
+      "Mauritania\n",
+      "Mauritius\n",
+      "Mexico\n",
+      "Moldova\n",
+      "Monaco\n",
+      "Mongolia\n",
+      "Montenegro\n",
+      "Morocco\n",
+      "Mozambique\n",
+      "Namibia\n",
+      "Nepal\n",
+      "Netherlands\n",
+      "New Zealand\n",
+      "Nicaragua\n",
+      "Niger\n",
+      "Nigeria\n",
+      "North Macedonia\n",
+      "Norway\n",
+      "Oman\n",
+      "Pakistan\n",
+      "Palau\n",
+      "Panama\n",
+      "Papua New Guinea\n",
+      "Paraguay\n",
+      "Peru\n",
+      "Philippines\n",
+      "Poland\n",
+      "Portugal\n",
+      "Qatar\n",
+      "Romania\n",
+      "Russia\n",
+      "Rwanda\n",
+      "Saint Kitts and Nevis\n",
+      "Saint Lucia\n",
+      "Saint Vincent and the Grenadines\n",
+      "Samoa\n",
+      "San Marino\n",
+      "Sao Tome and Principe\n",
+      "Saudi Arabia\n",
+      "Senegal\n",
+      "Serbia\n",
+      "Seychelles\n",
+      "Sierra Leone\n",
+      "Singapore\n",
+      "Slovakia\n",
+      "Slovenia\n",
+      "Somalia\n",
+      "South Africa\n",
+      "South Sudan\n",
+      "Spain\n",
+      "Sri Lanka\n",
+      "Sudan\n",
+      "Summer Olympics 2020\n",
+      "Suriname\n",
+      "Sweden\n",
+      "Switzerland\n",
+      "Syria\n",
+      "Taiwan*\n",
+      "Tajikistan\n",
+      "Tanzania\n",
+      "Thailand\n",
+      "Timor-Leste\n",
+      "Togo\n",
+      "Trinidad and Tobago\n",
+      "Tunisia\n",
+      "Turkey\n",
+      "US\n",
+      "Uganda\n",
+      "Ukraine\n",
+      "United Arab Emirates\n",
+      "United Kingdom\n",
+      "Uruguay\n",
+      "Uzbekistan\n",
+      "Venezuela\n",
+      "Vietnam\n",
+      "West Bank and Gaza\n",
+      "Yemen\n",
+      "Zambia\n",
+      "Zimbabwe\n"
+     ]
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "from data import countries_df\n",
     "\n",
-    "conditions = [\"confirmed\", \"deaths\", \"recovered\"]\n",
-    "\n",
-    "def make_df(condition, country=None):\n",
-    "    df = pd.read_csv(f\"data/covid19_{condition}.csv\")\n",
-    "    if country is not None:\n",
-    "        df = df.loc[df[\"Country/Region\"] == country]\n",
-    "    df = df.drop(columns=[\"Province/State\", \"Country/Region\",\"Lat\",\"Long\"]).sum().reset_index(name=condition)\n",
-    "    df = df.rename(columns={\"index\":\"date\"})\n",
-    "    return df\n",
-    "\n",
-    "\n",
-    "def make_global_df(country=None):\n",
-    "\n",
-    "    final_df = None\n",
-    "\n",
-    "    for condition in conditions:\n",
-    "        condition_df = make_df(condition, country)\n",
-    "        if final_df is None:\n",
-    "            final_df = condition_df\n",
-    "        else:\n",
-    "            final_df = final_df.merge(condition_df)\n",
-    "\n",
-    "    return final_df\n",
-    "\n",
-    "type(make_global_df(\"Japan\"))\n"
+    "df = countries_df.sort_values(\"Country_Region\").reset_index()\n",
+    "df = df[\"Country_Region\"]\n",
+    "df\n",
+    "for c in df:\n",
+    "    print(c)"
    ]
   }
  ],
